22Aug2025/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: netpol-demo
spec:
  containers:
    - name: backend
      image: hashicorp/http-echo
      args: ["-text=Hello from backend"]
      ports:
      - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: netpol-demo
spec:
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
