22Aug2025/database.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  namespace: netpol-demo
  labels:
    app: db
spec:
  containers:
  - name: mysql
    image: mysql:8
    ports:
    - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: netpol-demo
spec:
  selector:
    app: db
  ports:
  - port: 3306
    targetPort: 3306
